[DELETE] Delete redundant example files as combined in a single notebook

--- a/src/examples/examples.ipynb
+++ b/src/examples/examples.ipynb
@@ -259,7 +259,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from algorithms import ECC_GF2n, ECC_GF2n\n",
+    "from algorithms import ECC_GF2n, ECC_GFp\n",
+    "from tests import ECCTester\n",
     "\n",
     "def test_ecc():\n",
     "    tester = ECCTester()\n",
