[ADD] Add Timing Attack with successfully test on DES

--- a/src/examples/examples.ipynb
+++ b/src/examples/examples.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5d6efd72",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "11485f8c",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f5a28705",
    "metadata": {},
    "outputs": [],
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "1a586565",
    "metadata": {},
    "outputs": [
@@ -1127,13 +1127,13 @@
       "Plaintext: 123456ABCD132536\n",
       "Original Key: AABB09182736CCDD\n",
       "Ciphertext:\n",
-      "As binary 1100000010110111101010001101000001011111001110101000001010011100\n",
-      "As hexaC0B7A8D05F3A829C\n",
+      "As binary: 1100000010110111101010001101000001011111001110101000001010011100\n",
+      "As hexa: C0B7A8D05F3A829C\n",
       "\n",
-      "Starting brute force attack with 1000000 attempts...\n",
+      "Starting brute force attack with 10000 attempts...\n",
       "\n",
-      "No key found after 1000000 attempts\n",
-      "Time taken: 10.03 seconds\n",
+      "No key found after 10000 attempts\n",
+      "Time taken: 0.10 seconds\n",
       "\n",
       "Attack failed to find the key within the attempt limit\n"
      ]
@@ -1148,7 +1148,82 @@
     "# Example of brute force attack on DES\n",
     "test = BruteForceAttack(des)\n",
     "\n",
-    "test.demonstrate_brute_force(max_attempts = 1000000)"
+    "test.demonstrate_brute_force(max_attempts = 10000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dd67924",
+   "metadata": {},
+   "source": [
+    "# Timing Attack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "343fdb80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating test case...\n",
+      "Plaintext: 123456ABCD132536\n",
+      "Original Key: AABB09182736CCDD\n",
+      "Ciphertext:\n",
+      "As binary 1100000010110111101010001101000001011111001110101000001010011100\n",
+      "As hex C0B7A8D05F3A829C\n",
+      "\n",
+      "Starting timing attack with 1000 chars...\n",
+      "Guessing byte 1...\n",
+      "Guessed char: A, Current key: A\n",
+      "Guessing byte 1...\n",
+      "Guessed char: A, Current key: AA\n",
+      "Guessing byte 2...\n",
+      "Guessed char: B, Current key: AAB\n",
+      "Guessing byte 2...\n",
+      "Guessed char: B, Current key: AABB\n",
+      "Guessing byte 3...\n",
+      "Guessed char: 0, Current key: AABB0\n",
+      "Guessing byte 3...\n",
+      "Guessed char: 9, Current key: AABB09\n",
+      "Guessing byte 4...\n",
+      "Guessed char: 1, Current key: AABB091\n",
+      "Guessing byte 4...\n",
+      "Guessed char: 8, Current key: AABB0918\n",
+      "Guessing byte 5...\n",
+      "Guessed char: 2, Current key: AABB09182\n",
+      "Guessing byte 5...\n",
+      "Guessed char: 7, Current key: AABB091827\n",
+      "Guessing byte 6...\n",
+      "Guessed char: 3, Current key: AABB0918273\n",
+      "Guessing byte 6...\n",
+      "Guessed char: 6, Current key: AABB09182736\n",
+      "Guessing byte 7...\n",
+      "Guessed char: C, Current key: AABB09182736C\n",
+      "Guessing byte 7...\n",
+      "Guessed char: C, Current key: AABB09182736CC\n",
+      "Guessing byte 8...\n",
+      "Guessed char: D, Current key: AABB09182736CCD\n",
+      "Guessing byte 8...\n",
+      "Guessed char: D, Current key: AABB09182736CCDD\n",
+      "\n",
+      "Key found after guessing 16 chars!\n",
+      "Time taken: 215.02 seconds\n",
+      "\n",
+      "Success! Found key: AABB09182736CCDD\n",
+      "Original key was: AABB09182736CCDD\n"
+     ]
+    }
+   ],
+   "source": [
+    "from examples.timing_attack import TimingAttack\n",
+    "\n",
+    "test = TimingAttack(des)\n",
+    "\n",
+    "test.demonstrate_timing_attack(max_attempts = 1000)"
    ]
   }
  ],
