[MODIFY] Completing the project

--- a/src/examples/examples.ipynb
+++ b/src/examples/examples.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5d6efd72",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "11485f8c",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f5a28705",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "009ba637",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "eaf5df54",
    "metadata": {},
    "outputs": [
@@ -241,12 +241,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated primes: p = 2294954983, q = 3801405667\n",
+      "Generated primes: p = 3569834651, q = 3636970993\n",
       "------------------------ONE AT A TIME------------------------\n",
-      "Ciphertext: [16807, 1024, 161051, 161051, 537824]\n",
+      "Ciphertext: [823543, 16384, 19487171, 19487171, 105413504]\n",
       "Decrypted: [7, 4, 11, 11, 14]\n",
       "------------------------CONCATENATE------------------------\n",
-      "Ciphertext: 5322415581585349424\n",
+      "Ciphertext: 4029648954676385305\n",
       "Decrypted: hello\n"
      ]
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "c428a69a",
    "metadata": {},
    "outputs": [
@@ -311,20 +311,20 @@
       "3P = (3, 10)\n",
       "\n",
       "Testing ECDH key exchange...\n",
-      "Alice's private key: 5\n",
-      "Alice's public key: (18, 3)\n",
-      "Bob's private key: 11\n",
-      "Bob's public key: (1, 16)\n",
-      "Alice's computed shared secret: 0\n",
-      "Bob's computed shared secret: 0\n",
+      "Alice's private key: 4\n",
+      "Alice's public key: (13, 16)\n",
+      "Bob's private key: 5\n",
+      "Bob's public key: (18, 3)\n",
+      "Alice's computed shared secret: 5\n",
+      "Bob's computed shared secret: 5\n",
       "Shared secrets match: True\n",
       "\n",
       "Testing encryption/decryption...\n",
       "Original message: Hello, ECC!\n",
-      "Ciphertext: ((12, 4), 16)\n",
-      "Encryption metrics: {'encryption_time': 0.0002830028533935547, 'decryption_time': 0, 'memory_usage': 0}\n",
+      "Ciphertext: ((1, 7), 22)\n",
+      "Encryption metrics: {'encryption_time': 0.0002887248992919922, 'decryption_time': 0, 'memory_usage': 0}\n",
       "Decrypted message: 22\n",
-      "Decryption metrics: {'encryption_time': 0.0002830028533935547, 'decryption_time': 0.00012350082397460938, 'memory_usage': 0}\n",
+      "Decryption metrics: {'encryption_time': 0.0002887248992919922, 'decryption_time': 8.726119995117188e-05, 'memory_usage': 0}\n",
       "Original message hash: 22\n",
       "Decryption successful: True\n",
       "\n",
@@ -355,9 +355,9 @@
       "Testing encryption/decryption...\n",
       "Original message: Hello, ECC!\n",
       "Ciphertext: ((1000, 10), 10001101)\n",
-      "Encryption metrics: {'encryption_time': 9.131431579589844e-05, 'decryption_time': 0, 'memory_usage': 0}\n",
+      "Encryption metrics: {'encryption_time': 7.796287536621094e-05, 'decryption_time': 0, 'memory_usage': 0}\n",
       "Decrypted message: 15\n",
-      "Decryption metrics: {'encryption_time': 9.131431579589844e-05, 'decryption_time': 3.337860107421875e-05, 'memory_usage': 0}\n",
+      "Decryption metrics: {'encryption_time': 7.796287536621094e-05, 'decryption_time': 3.361701965332031e-05, 'memory_usage': 0}\n",
       "Original message hash: 1111\n",
       "Decryption successful: True\n",
       "\n",
@@ -365,13 +365,13 @@
       "Base point G is on the curve: True\n",
       "\n",
       "Testing ECDH key exchange...\n",
-      "Alice's private key (truncated): 0xcb7865ac...\n",
-      "Alice's public key (truncated): (0xd4379ee2..., 0xd83ccd8d...)\n",
-      "Bob's private key (truncated): 0xfbb95d7c...\n",
-      "Bob's public key (truncated): (0xd2b22cbc..., 0x2eed2261...)\n",
+      "Alice's private key (truncated): 0xc995e1f2...\n",
+      "Alice's public key (truncated): (0x509d0715..., 0xeee0409f...)\n",
+      "Bob's private key (truncated): 0xe37a013c...\n",
+      "Bob's public key (truncated): (0xad94310b..., 0x4ea7dc90...)\n",
       "Shared secrets match: True\n",
-      "Alice's derived key (truncated): 2909c2a9c8...\n",
-      "Bob's derived key (truncated): 2909c2a9c8...\n",
+      "Alice's derived key (truncated): bdfea5f973...\n",
+      "Bob's derived key (truncated): bdfea5f973...\n",
       "Derived keys match: True\n",
       "\n",
       "===== Curve25519 Parameters =====\n",
@@ -400,17 +400,9 @@
     "ECC_test = ECCTester()\n",
     "ECC_test.run_all_tests()\n",
     "\n",
-    "# ECC algorithms encryption and decryption\n",
-    "\n",
-    "#plaintext = \"\"\n",
-    "#key?\n",
     "ECC_p = ECC_GFp()\n",
-    "#ECC_p_ciphertext = ECC_p.encrypt()?\n",
-    "#decrypt?\n",
     "\n",
-    "ECC_2n = ECC_GF2n()\n",
-    "#ECC_2n_ciphertext = ECC_GF2n.encrypt()?\n",
-    "#decrypt?"
+    "ECC_2n = ECC_GF2n()"
    ]
   },
   {
@@ -423,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "edfd0dbb",
    "metadata": {},
    "outputs": [
@@ -1103,6 +1095,39 @@
     "TC1_expected = [0xDDAF35A193617ABA, 0xCC417349AE204131, 0x12E6FA4E89A97EA2, 0x0A9EEEE64B55D39A,\n",
     "                0x2192992A274FC1A8, 0x36BA3C23A3FEEBBD, 0x454D4423643CE80E, 0x2A9AC94FA54CA49F]\n",
     "sha512_compare_digests(sha512.H, TC1_expected)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59018c36",
+   "metadata": {},
+   "source": [
+    "# Whirlpool Hash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4a089364",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9c098f039c3d374127bed1d6f98c64995fbdad378b4cace62bc07701c48fed6c119d049fbb2216f42a7b4ce6db94c1b46dc3f6bc21e9059c7086ecef699238bc\n",
+      "91bbfa567e30c4745640af1817c8718023de4893e4deac96b9c96cee13d27c9da71ddad37544b3c197188386c16e34b08e8fdd45c4f695144bb0d9d97be63153\n"
+     ]
+    }
+   ],
+   "source": [
+    "from algorithms import whirlpool_hash\n",
+    "\n",
+    "input_messages = {\"\", \"a\"}\n",
+    "for input_message in input_messages:\n",
+    "    output_hash = whirlpool_hash(input_message.encode('utf-8'))\n",
+    "    output_hex = output_hash.hex()\n",
+    "    print(output_hex)"
    ]
   },
   {
