[ADD] Optional input for attack algo

--- a/src/examples/examples.ipynb
+++ b/src/examples/examples.ipynb
@@ -1148,7 +1148,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating test case...\n",
+      "Setting up test case...\n",
+      "Using generated test case...\n",
       "Plaintext: 123456ABCD132536\n",
       "Original Key: AABB09182736CCDD\n",
       "Ciphertext:\n",
@@ -1173,7 +1174,12 @@
     "# Example of brute force attack on DES\n",
     "test = BruteForceAttack(des)\n",
     "\n",
-    "test.demonstrate_brute_force(max_attempts = 10000)"
+    "max_attempts = input(\"Enter max attempts: \")\n",
+    "plaintext = input(\"Enter plaintext (hex): \")\n",
+    "key = input(\"Enter key (hex): \")\n",
+    "\n",
+    "test.demonstrate_brute_force(max_attempts = 10000)\n",
+    "#test.demonstrate_brute_force(max_attempts = 10000, plaintext = plaintext, key = key)"
    ]
   },
   {
@@ -1186,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "343fdb80",
    "metadata": {},
    "outputs": [
@@ -1248,7 +1254,12 @@
     "\n",
     "test = TimingAttack(des)\n",
     "\n",
-    "test.demonstrate_timing_attack(max_attempts = 1000)"
+    "max_attempts = input(\"Enter max attempts: \")\n",
+    "plaintext = input(\"Enter plaintext (hex): \")\n",
+    "key = input(\"Enter key (hex): \")\n",
+    "\n",
+    "test.demonstrate_timing_attack(max_attempts = 1000)\n",
+    "#test.demonstrate_timing_attack(max_attempts = 10000, plaintext = plaintext, key = key)"
    ]
   }
  ],
