[REPORT] Update the final report

--- a/src/examples/examples.ipynb
+++ b/src/examples/examples.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "5d6efd72",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\HUST\\Semesters\\2024.2\\LTMM\\Project Cryptography\\src\\examples\n"
+      "d:\\HUST\\Semesters\\2024.2\\LTMM\\Project Cryptography\\src\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "11485f8c",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "f5a28705",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "9640c76e",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "b0e4162a",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "009ba637",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "eaf5df54",
    "metadata": {},
    "outputs": [
@@ -241,12 +241,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated primes: p = 3569834651, q = 3636970993\n",
+      "Generated primes: p = 4233579569, q = 2832818257\n",
       "------------------------ONE AT A TIME------------------------\n",
-      "Ciphertext: [823543, 16384, 19487171, 19487171, 105413504]\n",
+      "Ciphertext: [16807, 1024, 161051, 161051, 537824]\n",
       "Decrypted: [7, 4, 11, 11, 14]\n",
       "------------------------CONCATENATE------------------------\n",
-      "Ciphertext: 4029648954676385305\n",
+      "Ciphertext: 2631140162161542955\n",
       "Decrypted: hello\n"
      ]
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "edfd0dbb",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "4a089364",
    "metadata": {},
    "outputs": [
@@ -1116,18 +1116,25 @@
      "output_type": "stream",
      "text": [
       "9c098f039c3d374127bed1d6f98c64995fbdad378b4cace62bc07701c48fed6c119d049fbb2216f42a7b4ce6db94c1b46dc3f6bc21e9059c7086ecef699238bc\n",
-      "91bbfa567e30c4745640af1817c8718023de4893e4deac96b9c96cee13d27c9da71ddad37544b3c197188386c16e34b08e8fdd45c4f695144bb0d9d97be63153\n"
+      "512\n",
+      "2741c57456a3f758cf3aa0cc137ee29df0bcaf324067c01b5c6db7a656a28a39afcca8d0f31fd8e47c0d54ac50c252a13853aa15ab63141eaa13db9c975799df\n",
+      "512\n",
+      "91bbfa567e30c4745640af1817c8718023de4893e4deac96b9c96cee13d27c9da71ddad37544b3c197188386c16e34b08e8fdd45c4f695144bb0d9d97be63153\n",
+      "512\n",
+      "b24cb7952dcff52db45ec591715425d8504bba4eabaa5c5ce6633d3a42c45c3aeb7655989321f85b60fbeaf9a3d456bb6d23f361cfa718b234c67003818001be\n",
+      "512\n"
      ]
     }
    ],
    "source": [
     "from algorithms import whirlpool_hash\n",
     "\n",
-    "input_messages = {\"\", \"a\"}\n",
+    "input_messages = {\"\", \"a\", \"aasdasdas\", \"hello\"}\n",
     "for input_message in input_messages:\n",
     "    output_hash = whirlpool_hash(input_message.encode('utf-8'))\n",
     "    output_hex = output_hash.hex()\n",
-    "    print(output_hex)"
+    "    print(output_hex)\n",
+    "    print(len(output_hex) * 4)"
    ]
   },
   {
@@ -1140,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1a586565",
    "metadata": {},
    "outputs": [
